--- a/index.html
+++ b/index.html
@@ -355,6 +355,8 @@
 						<span class="input_box__title">Mensaje</span>
 					</label>
 					<button class="btn_primary" type="submit">Enviar mensaje</button>
+
+					<input type="hidden" name="_next" value="https://cesaruizvera-portafolio.netlify.app">
 				</form>
 			</div>
 		</section>
