--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 							<img class="cover_image cover_image--contain" src="./assets/1200px-Platzi.jpg" alt="">
 						</div>
 						<div class="flex_grid__content__item__footer">
-							Curos de informatica
+							Cursos de informatica
 						</div>
 					</div>
 					<div class="flex_grid__content__item flex_grid__content__item--block">
